kubernetes/mongo-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: mongo
  namespace: erp
  name: mongo
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: mongo
    spec:
      containers:
        - env:
            - name: MONGO_INITDB_ROOT_PASSWORD
              value: prisma
            - name: MONGO_INITDB_ROOT_USERNAME
              value: prisma
          image: mongo:4.4
          name: mongo
          ports:
            - containerPort: 27017
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/mongo
              name: mongo
      restartPolicy: Always
      volumes:
        - name: mongo
          persistentVolumeClaim:
            claimName: mongo
status: {}
