kubernetes/prisma-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: prisma
  name: prisma
  namespace: erp
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: prisma
    spec:
      containers:
        - name: prisma
          image: prismagraphql/prisma:1.34
          ports:
            - containerPort: 4466
      restartPolicy: Always
status: {}
