kubernetes/prisma-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: prisma
  name: prisma
  namespace: erp
spec:
  ports:
    - name: '4466'
      port: 4466
      targetPort: 4466
  selector:
    io.kompose.service: prisma
status:
  loadBalancer: {}
